Fix alignment issues in skills-to-learn section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,9 +61,10 @@ h2 {
 
 .cover {
 	background: url('../img/cover-green4.png') top left no-repeat;
-    background-size: cover;
+   background-size: cover;
     display: table;
     width: 100%;
+    padding: 0 20%;
     box-shadow:inset 0 0 100px #000;
 }
 
@@ -95,8 +96,10 @@ h2 {
 .cover .btn {
  
     margin-bottom:20px;
-    width:400px;
+    width:50%;
 }
+
+
 
 nav.navbar-default {
     background: white;
@@ -199,7 +202,9 @@ nav.navbar-default {
 }
 
 .skills img {
-    width:50%;
+    
+    display:inline-block;
+    max-height:80px;
 }
 
 /*--- Testimonials Section ---*/
@@ -509,4 +514,18 @@ fieldset[disabled] .btn-green-inverse.focus {
 .btn-green-inverse .badge {
   color: #5cb85c;
   background-color: #00AC72;
+}
+
+
+/*===============
+  MEDIA QUERIES
+=================*/
+
+@media only screen and ( max-width: 568px) {
+  
+  .cover h1 {
+    font-size:20px;
+  }
+
+
 }
